k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
  name: httptester.dev2.zinclabs.dev
  namespace: default
spec:
  rules:
  - host: httptester.dev2.zinclabs.dev
    http: 
      paths:
      - pathType: Prefix
        backend:
          service:
            name: httptester
            port:
              number: 6080
        path: /
  tls:
  - hosts:
    - httptester.dev2.zinclabs.dev
    secretName: httptester.dev2.zinclabs.dev
